methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:15: error: illegal start of simple expression
  var arr = Array( [x-1,j], [x+1,j], [x,j-1], [x,j+1] );
                   ^PictureMono1:23: error: ')' expected but '}' found.
}
^